# sanctum

./: .gitattributes  .gitignore  Cargo.toml  README.md  SIGNING.md  THIRD_PARTY.md  rust-toolchain.toml  vercel.json
.claude/: launch.json
.github/workflows/: release.yml
blocklist/: adult-domains-full.txt  adult-domains.txt  bypass-domains.txt  bypass-extra.txt  doh-endpoints.txt  keywords.txt  safesearch.map  strict-domains.txt
crates/sanctum-core/: Cargo.toml
crates/sanctum-core/src/: approval.rs  blocklist.rs  config.rs  domain.rs  error.rs  hosts.rs  ipc.rs  keyword.rs  lib.rs  password.rs  paths.rs  safesearch.rs  storage.rs
crates/sanctum-recover/: Cargo.toml
crates/sanctum-recover/src/: main.rs
crates/sanctum-service/: Cargo.toml
crates/sanctum-service/src/: browser_policy.rs  dns.rs  engine.rs  firewall.rs  heartbeat.rs  hostsfile.rs  intervention.rs  ipc.rs  lib.rs  lists.rs  main.rs  netcfg.rs  notifier.rs  service.rs
crates/sanctum-service/tests/: dns_resolver.rs  ipc.rs
crates/sanctum-watchdog/: Cargo.toml
crates/sanctum-watchdog/src/: main.rs
docs/: ADR-001-enforcement-core.md
site/: blog.css  contact.html  index.html  privacy.html  robots.txt  sitemap.xml
site/blog/: does-incognito-mode-hide-anything.html  how-long-do-urges-last.html  how-to-block-adult-sites-on-windows.html  index.html  why-willpower-fails.html
tools/: build-installer.ps1  fetch_blocklist.py  gen_icons.mjs  integrity_check.py  verify.ps1
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  main.tsx  styles.css
ui/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: lib.rs  main.rs
ui/src/components/: BreathingOrb.tsx  Button.tsx  ConfirmModal.tsx  ControlButton.tsx  List.tsx  SecuritySection.tsx  StatusRing.tsx  Switch.tsx  TopBar.tsx  UrgeOverlay.tsx  icons.tsx
ui/src/lib/: format.ts  hooks.ts  ipc.ts  types.ts
ui/src/screens/: Accountability.tsx  BlockList.tsx  Home.tsx  InterventionWindow.tsx  Letter.tsx  Progress.tsx  Protection.tsx  Schedule.tsx
winget/: README.md
