[package]
name = "sanctum-watchdog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Sanctum watchdog: a visible companion service that restarts the main service if it stops."

[[bin]]
name = "sanctum-watchdog"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
windows-service = "0.8.1"
